# python-async-hooks

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
async_hooks/: __init__.py  manager.py  scope.py  types.py
async_hooks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/specs/: issue-2-typed-payloads.md  issue-3-introspection-api.md  issue-4-wildcard-subscription.md  issue-5-on-intercept-api.md
tests/: test_actions.py  test_dynamic_removal.py  test_filters.py  test_introspection.py  test_namespaces.py  test_on_intercept_off.py  test_reentrance.py  test_scope.py  test_subscribe_all.py  test_sync_async.py  test_typed_payloads.py
