[project]
name = "async-hooks"
version = "0.2.0"
description = "WordPress-style async hooks/filters for Python — actions, filters, priority ordering, re-entrancy safety"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
